Add font-family to h1, h2, h3, and p elements

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,17 @@
-font-family: 'Helvetica', sans-serif;
 h1 {
   text-align: center;
+  font-family: 'Helvetica', sans-serif;
 }
 h2 {
   text-align: center;
+  font-family: 'Helvetica', sans-serif;
+}
+h3 {
+  text-align: center;
+  font-family: 'Helvetica', sans-serif;
 }
 p {
   padding-left: 20;
   padding-right: 20;
+  font-family: 'Helvetica', sans-serif;
 }
